<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="mainTitle">Hauptmenü</string>
    <string name="app_name">EnergieBerater</string>
    
    <!-- Namen der Buttons im Hauptmenü -->
    <string name="button1">Zählerverwaltung</string>
    <string name="button2">Statistik</string>
    <string name="button3">Rechner</string>
    <string name="button4">Gerätevergleich</string>
    <string name="button5">Geräteverwaltung</string>
    
    <string name="zaehlerHinzufuegen">Zähler hinzufügen</string>
    <string name="zaehlerUebersicht">Zählerübersicht:</string>
    
    <string name="aktionen">Aktionen</string>
    <string name="loeschen">Zähler entfernen</string>
    <string name="im_internet_suchen">Gerät im Internet suchen</string>
    <string name="dialog_zaehlernummer">Zählernummer:</string>
    <string name="dialog_zaehlertyp">Zählerart:</string>
    <string name="dialog_hinzufuegen">Hinzufügen</string>
    <string name="dialog_speichern">Speichern</string>
    <string name="dialog_loeschen">Löschen</string>
    <string name="dialog_wm_filer_sortieren">Sortieren nach:</string>
    
    <string name="menu_zaehlerHinzufuegen">Neuer Zähler</string>
    <string name="title_zaehleruebersicht">Zählerübersicht</string>
    <string name="title_geraetevergleich">Gerätevergleich</string>
    <string name="title_geraeteverwaltung">Geräteverwaltung</string>
    

    <string name="txt_zaehlerliste_leer">Es sind keine Zähler vorhanden.</string>
    <string name="title_zaehlerstanderfassen">Zählerstand erfassen</string>
    <string name="txt_zaehlerstanderfassen_info">Bitte den aktuellen Zählerstand einstellen:</string>
    <string name="txt_zaehlerstanderfassen_prezaehlernummer">Zählernummer:</string>
    <string name="menu_zaehlerstand_speichern">Speichern</string>
    <string name="menu_einstellungen">Einstellungen</string>
    <string name="menu_diff">Diff test</string>
    
    <string name="menu_filter">Anordnung</string>
    <string name="dialog_hinzufuegen">Anwenden</string>
    
    
    <string name="menu_strichcode">Scannen</string>
    
    <string name="einstellungen_theme_titel">Aussehen</string>
    <string name="einstellungen_theme_list_titel">Theme auswählen</string>
    <string name="einstellungen_titel">Einstellungen für Synchronisation</string>
    <string name="einstellungen_default_theme">darkTheme</string>
    <string name="einstellungen_theme_list_untertitel">Aussehen der Benutzeroberfläche</string>
    <string name="list_item_letzte_ablesung">Letzte Ablesung: %d</string>
    <string name="list_item_stand">Letzter Stand: %v</string>
    <string name="calc_dishw">Spülmaschinen</string>
    <string name="calc_washer">Waschmaschinen</string>
    <string name="calc_fridge">Kühlschränke</string>
    <string name="list_item_keine_werte_erfasst">Es wurde noch kein Zählerstand erfasst.</string>
    <string name="list_item_blank"> </string>

    <string name="auswertung_wm_literErsparnis">%l Liter Wasser</string>
    <string name="auswertung_wm_kwhErsparnis">%kwh kWh Strom</string>
    <string name="auswertung_wm_euroErsparnis">%euro Euro</string>
    <string name="menu_erinnerungHinzufuegen">Erinnerung</string>
    <string name="title_zaehlererinnerung">Erinnerung</string>
    <string name="erinnerung_fehler_datum_liegt_in_vergangenheit">Datum muss in der Zukunft liegen</string>
    <string name="auswertung_wm_text_anderes">dauert es, bis sich der Kauf eines Neugeräts oder des teureren und sparsameren Geräts gegenüber des günstigeren weniger sparsameren Geräts amortisiert hat.</string>
    <string name="auswertung_wm_text_eigenes">dauert es, bis sich der Kauf des Neugeräts gegenüber Ihrem alten, weniger sparsameren Geräts amortisiert hat.</string>
    <string name="auswertung_wm_text_unmoeglich">Auswertung nicht möglich, da das Gerät welches mehr Energie verbraucht teuerer ist, als das sparsamere Gerät.</string>
    
    <string name="auswertung_text_empf_negativ">Auf Grund der langen Amortisationszeit gibt es keine Kaufemfpehlung.</string>
    <string name="auswertung_text_empf_positiv">Kaufemfpehlung! Der Kauf dieser Maschine rechnet sich bereits nach kurzer Zeit.</string>
    <string name="auswertung_text_empf_mittel">Der Kauf dieser Maschine rechnet in einem relativ kurzem Zeitraum.</string>
    
    <string name="auswertung_wm_keingeraet">Es ist kein eigenes Gerät erfasst.</string>
    <string name="auswertung_wm_kwh_info">Was ist eine Kilowattstunde?</string>
    <string name="dialog_kwh_info_titel">Eine Kilowattstunde</string>
    <string name="gv_wm_list_item_preis">%r €</string>
    <string name="gv_wm_list_item_eek">Effizienzkl.: %r</string>
    <string name="gv_wm_list_item_ladevolumen">Ladevolumen: %r Liter</string>
        <string name="gv_wm_list_item_sverbrauch">Stromverbrauch: %r kWh</string>
    <string name="gv_wm_list_item_wverbrauch">Wasserverbrauch: %r Liter</string>
    <string name="txt_geraete_fehlen">Keine Geräte gefunden.</string>
    
    <string name="meineWmWasserverbrauch">• %r Liter Wasser</string>
    <string name="meineWmStromverbrauch">• %r kWh Strom</string>
    <string name="meineWmFuellmenge">Füllmenge %r Liter</string>
    <string name="menu_synchronisieren">Synchronisieren</string>
    
    <!-- Settings -->
    <string name="setup_cat_ip_address">IP Addresse</string>
    <string name="setup_cat_port_number">Port</string>
    <string name="setup_default_ip_address">192.168.0.1</string>
    <string name="setup_default_port_number">7676</string>
    <string name="setup_ip_address">IP Addresse ändern</string>
    <string name="setup_port_number">Port ändern</string>
    
    
    
    
        
        
</resources>